<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.nmrfx</groupId>
    <artifactId>nmrfx-analyst-gui</artifactId>
    <version>11.1.36</version>
    <name>nmrfx-analyst-gui</name>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass> org.nmrfx.processor.gui.AnalystApp</mainClass>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.nmrfx</groupId>
            <artifactId>nmrfx-processor</artifactId>
            <version>11.1.36</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.nmrfx</groupId>
            <artifactId>nmrfx-processor-gui</artifactId>
            <version>11.1.36</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.nmrfx</groupId>
            <artifactId>nmrfx-analyst</artifactId>
            <version>11.1.36</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.nmrfx</groupId>
            <artifactId>nmrfx-structure</artifactId>
            <version>11.1.36</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.comdnmr</groupId>
            <artifactId>ringnmr-gui</artifactId>
            <version>1.04</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>15</version>
            <classifier>mac</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>15</version>
            <classifier>mac</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>15</version>
            <classifier>mac</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>15</version>
            <classifier>linux</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>15</version>
            <classifier>linux</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>15</version>
            <classifier>linux</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>15</version>
            <classifier>win</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>15</version>
            <classifier>win</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>15</version>
            <classifier>win</classifier>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.4</version>
                <configuration>
                    <mainClass>org.nmrfx.processor.gui.MainApp</mainClass>
                    <options>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>assembly:package</id>
                        <phase>package</phase>
                        <goals>
                            <goal>build-classpath</goal>
                        </goals>
                        <configuration>
                            <outputFilterFile>true</outputFilterFile>
                            <excludeScope>system</excludeScope>
                            <excludeGroupIds>junit,org.mockito,org.hamcrest</excludeGroupIds>
                            <outputFile>target/myFilter.properties</outputFile>
                            <prefix>.</prefix>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <id>fixFilters</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <classpathScope>compile</classpathScope>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>org.python.util.jython</argument>
                                <argument>src/main/scripts/filter.py</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>maniJar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jar</executable>
                            <arguments>
                                <argument>cfm</argument>
                                <argument>target/Manifest.jar</argument>
                                <argument>target/Manifest.txt</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <!-- Required for https://issues.apache.org/jira/browse/MASSEMBLY-289 -->
                <executions>
                    <execution>
                        <id>assembly:package</id>
                        <phase>package</phase>
                        <goals>
                            <!--
                              Work around for http://jira.codehaus.org/browse/MASSEMBLY-97
                              as the goal should be attached.
                            -->
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/assembly/bin.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                    <execution>
                        <id>assembly:package:noattach</id>
                        <phase>package</phase>
                        <goals>
                            <!--
                              Work around for http://jira.codehaus.org/browse/MASSEMBLY-97
                              as the goal should be attached.
                            -->
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/assembly/bin-dir.xml</descriptor>
                            </descriptors>
                            <attach>false</attach>
                        </configuration>
                    </execution>
                </executions>
            </plugin>  
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>

</project>
